<resources>
    <string name="app_name">FirstProject</string>
    <string name="loadmore">Loading more items please wait&#8230;</string>
    <string name="description_button_1">Button 1</string>
    <string name="title_activity_shared_preference">SharedPreferenceActivity</string>
    <string name="title">Title:</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="content">Content:</string>
    <string name="add_note">Add Note</string>
    <string name="id">ID:</string>
    <string name="about">About:</string>
    <string name="textviewname">TextViewName</string>
    <string name="textviewage">TextViewAge</string>
    <string name="name">Name...</string>
    <string name="age">Age...</string>
    <string name="apply">Apply</string>
    <string name="header">Header</string>
    <string name="call">Call</string>
    <string name="sms">Sms</string>
    <string name="send_mail">Send Mail</string>
    <string name="launch_web">Launch Web</string>
    <string name="play_store">Play store</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="input_text">Input Text:</string>
    <string name="save_to_file">Save to file</string>
    <string name="read_file">Read file</string>
    <string name="write_your_text">Write your text...</string>
    <string name="remember_password">Remember password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up?</string>
    <string name="login_success">Login Success!</string>
    <string name="log_out">log Out</string>
    <string name="broadcast">Broadcast</string>
    <string name="service">Service</string>
    <string name="viewpager">ViewPager</string>
    <string name="fragment2">Fragment2</string>
    <string name="fragment">Fragment</string>
    <string name="storage">Storage</string>
    <string name="share_preference">Share Preference</string>
    <string name="sqlite">SQLite</string>
    <string name="intent_filter">Intent Filter</string>
    <string name="layout">Layout</string>
    <string name="go_to_login_page">Go to Login page</string>
    <string name="number">Number...</string>
    <string name="clear_number">Clear Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="asterisk">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hobby_1">Hobby 1</string>
    <string name="hobby_4">Hobby 4</string>
    <string name="hobby_2">Hobby 2</string>
    <string name="hobby_5">Hobby 5</string>
    <string name="hobby_3">Hobby 3</string>
    <string name="hobby_6">Hobby 6</string>
    <string name="register">Register</string>
    <string name="did_you_have_an_account">Did you have an account?</string>
    <string name="game_settings">Game Settings:</string>
    <string name="sound">Sound:</string>
    <string name="brightness">Brightness:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="toast">Toast</string>
    <string name="landscape_rotate_screen">Landscape - rotate screen</string>
    <string name="portrait_rotate_screen">Portrait - rotate screen</string>
    <string name="ten">Tên</string>
    <string name="password">Password:</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="note_title">Note Title</string>
    <string name="send_to_app2">Send to app2</string>
    <string name="send">Send</string>
    <string name="toolbar">Toolbar</string>
    <string name="ui_view">UI view</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="dialog">Dialog</string>
    <string name="fragment_dialog">FragmentDialog</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="done">Done</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="attachment">Attachment</string>
    <string name="Images">images</string>
    <string name="swipe_to_see">Swipe to see</string>
    <string name="swipe_here">Swipe here</string>
    <string name="gg_nap">Google Map</string>
    <string name="multi_thread_demo">Multi-Thread Demo</string>
    <string name="draw">Draw</string>
    <string name="thread_demo">Thread Demo</string>
    <string name="download_image">Download Image</string>
    <string name="async_task">AsyncTask</string>
    <string name="list_note">List Note</string>
    <string name="view_pager">VIEW PAGER</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="headertitle">HeaderTitle</string>
    <string name="json_demo">Json Demo</string>
    <string name="major">Major</string>
    <string name="company">Company</string>
    <string name="search">Search</string>
    <string name="aannotation_demo">AAnnotation Demo</string>
</resources>
