<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_toStartOf="@+id/imgBtnBackspace"
        android:hint="@string/number"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/imgBtnBackspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="#00121212"
        android:contentDescription="@string/clear_number"
        android:src="@drawable/ic_backspace" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imgBtnCall"
        android:layout_below="@+id/edtNumber">

        <TableRow
            android:id="@+id/tbDial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="#2f95fb"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="#2f95fb"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="#2f95fb"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnAsterisk"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/asterisk"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textColor="#2f95fb"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnHash"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/hash"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/imgBtnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_phone_call"
        android:contentDescription="@string/call" />
</RelativeLayout>