<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvHeaderAddEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_note"
        android:textColor="#f60000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/tvHeaderAddEdit"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/add"
        android:src="@drawable/img_nullavatar" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAvatar"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:background="#a0e7fc"
        android:inputType="text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNoteTitle"
        android:layout_marginTop="20dp"
        android:text="@string/content"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtNoteContent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/tvContent"
        android:background="#a0e7fc"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAddEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNoteContent"
        android:layout_centerHorizontal="true"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnAddEdit"
        android:layout_below="@+id/btnAddEdit"
        android:text="@string/delete"
        android:visibility="gone" />
</RelativeLayout>