<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_avatar" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imgAvatar"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/imgAvatar"
        android:layout_toStartOf="@+id/imgBtnFavourite"
        android:background="#a7edff"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/imgAvatar"
        android:background="#a7edff"
        android:text="@string/company" />

    <TextView
        android:id="@+id/tvMajor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/imgAvatar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/imgAvatar"
        android:background="#a7edff"
        android:text="@string/major" />

    <ImageButton
        android:id="@+id/imgBtnFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvCompany"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_staroff" />

</RelativeLayout>